# claude-weekly-trade-strategy

./: .gitignore  CLAUDE.md  CLAUDE_EN.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: .strategy-reviewer.md.swp  druckenmiller-strategy-planner.md  market-news-analyzer.md  strategy-reviewer.md  technical-market-analyst.md  us-market-analyst.md  weekly-trade-blog-writer.md
agents/: druckenmiller-strategy-planner.md  market-news-analyzer.md  strategy-reviewer.md  technical-market-analyst.md  us-market-analyst.md  weekly-trade-blog-writer.md
blogs/: 2025-11-17-weekly-strategy-en.md
dividend-stock-screener/: .env.sample  .gitignore  CLAUDE.md  README.md  run_daily_screening.sh
dividend-stock-screener/scripts/: generate_combined_report.py  report_generator.py  run_screening.py  screener.py  send_report.py
dividend-stock-screener/tests/: test_report_generator.py  test_screener.py  test_send_report.py
docs/: CODE_REVIEW.md  auto-trade-system-design-v2.md
results/full_backtest/: rebalance_timing_comparison.md
scripts/: fetch_market_close.py  generate_pseudo_historical_blogs.py  import_monty_weekly_blogs.py  optimize_pseudo_reverse_logic.py  run_backtest_matrix.sh  run_daily_action_plan.sh  send_dap_email.py  setup_schedule.sh
scripts/launchd/: com.weekly-trade-strategy.post-market.plist  com.weekly-trade-strategy.pre-market.plist
scripts/tests/: test_send_dap_email.py
skills/earnings-calendar/: SKILL.md
trade-analysis/: CLAUDE.md  README.md
trading/: TODO.md  __init__.py  config.py  main.py
trading/backtest/: __init__.py  (+13 more)
(+419 files in other folders)
